pxc/tests/test_156_rawptr/r5.px
public namespace r5 "use-unsafe";
public import core::common -;
// private import core::pointer::raw_unsafe -;
private import core::pointer::raw -;
public import core::meta m;

{
  int v = 99;
  const p = address(v);
  *p = 100; // error: deref__ not found
  println(v);
}

